--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,85 @@
 body {
   background-color: #FFDD23;
   font-family: impact;
+  margin: 0;
+}
+
+button,
+span {
+  background-color: transparent;
+  border-color: black;
+  font-family: impact;
+  font-size: 1.3em;
+  font-weight: bold;
+}
+
+h1 {
+  font-size: 2em;
+  margin: 0;
+}
+
+h2 {
+  font-size: 3em;
+  margin: 0;
+}
+
+header,
+.power-saving-mode {
+  background-color: black;
+  color: #FFDD23;
+}
+
+header {
+  padding: 0.5em 5em;
+}
+
+.reset-button {
+  color: #C90002;
+}
+
+.temperature {
+  margin: 4em 5em 5em;
+}
+
+.temperature h2 {
+  font-size: 6em;
+}
+
+.power-saving-mode,
+.energy-usage {
+  text-align: right;
+  padding: 1.25em 2.5em 1.5em;
+  margin-top: 2em;
+}
+
+.power-saving-mode button {
+  background-color: #FFDD23;
+  color: black;
+}
+
+.energy-usage span {
+  margin-left: 0.25em;
+}
+
+@media screen and (min-width: 960px) {
+  header {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 8em;
+    padding: 1em 0 0;
+    margin: 0;
+  }
+
+  h1 {
+    font-size: 7em;
+    transform: translateX(-20px) rotateZ(90deg);
+  }
+
+  .temperature,
+  .power-saving-mode,
+  .energy-usage {
+    margin-right: 8em;
+  }
 }
